--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,18 @@
 *.log
 *.tgz
 *.xcworkspace/
+.DS_Store
 .gradle/
 .idea/
-Pods/
-coverage/
+.yarnrc
 /packages/*/bin/
 /packages/*/dist/
 /packages/*/lib/
 /scripts/bin/
 /scripts/lib/
+Pods/
+coverage/
 local.properties
 node_modules/
 !**/__fixtures__/**/node_modules/
-.DS_Store
+yarn.lock
