--- a/incubator/yarn-plugin-external-workspaces/tsconfig.json
+++ b/incubator/yarn-plugin-external-workspaces/tsconfig.json
@@ -1,8 +1,11 @@
 {
-  "compilerOptions": {
-    "outDir": "./lib",
-    "module": "ESNext"
-  },
   "extends": "@rnx-kit/tsconfig/tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist",
+    "experimentalDecorators": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "target": "ES2021"
+  },
   "include": ["src"]
 }
