--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "clean": "git clean -dfqx --exclude=.yarn/cache",
     "clear-cache": "nx clear-cache",
     "format": "nx run-many --target format",
+    "lage:build": "lage build",
+    "lage:worker": "lage buildtsc",
     "lint": "nx run-many --target lint",
     "new-package": "node scripts/new-package.js",
     "publish:changesets": "changeset publish",
@@ -39,6 +41,7 @@
     "@types/node": "^20.0.0",
     "eslint": "^9.0.0",
     "knip": "^5.30.2",
+    "lage": "^2.12.0",
     "metro": "^0.81.0",
     "nx": "patch:nx@npm%3A20.3.3#~/.yarn/patches/nx-npm-20.3.3-84b801f64d.patch",
     "prettier": "^3.0.0",
