--- a/incubator/tools-typescript/package.json
+++ b/incubator/tools-typescript/package.json
@@ -36,6 +36,7 @@
     "@rnx-kit/typescript-service": "^2.0.0"
   },
   "devDependencies": {
+    "@lage-run/target-graph": "^0.11.0",
     "@rnx-kit/eslint-config": "*",
     "@rnx-kit/jest-preset": "*",
     "@rnx-kit/scripts": "*",
