--- a/scripts/package.json
+++ b/scripts/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@lage-run/target-graph": "^0.11.0",
     "@rnx-kit/tsconfig": "workspace:*",
     "@types/jest": "^29.2.1",
     "@types/js-yaml": "^4.0.5",
